Create frontend and add login, signup

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,7 @@
 DB_URI=mongodb+srv://<Username>:<Password>@book-club-library.cgi5get.mongodb.net/
 PORT=3000
 CLIENT_ORIGIN=
+ACCESS_TOKEN_SECRET=
+REFRESH_TOKEN_SECRET=
+NODE_ENV=
+SENDGRID_API_KEY=
